--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -11,4 +11,10 @@ div {
  
 .row {
     border-color: red;
+} 
+ 
+.list-group-item {
+    border: 0; 
+    margin-top: 40px; 
+    margin-bottom: 40px
 }
