--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -1,3 +1,7 @@
+html {
+    background-image: url(http://images8.alphacoders.com/397/397989.jpg);
+}
+ 
 div {
     border-style: solid; 
     border-width: 5px; 
@@ -17,7 +21,9 @@ div {
     border: 0; 
     margin-top: 40px; 
     margin-bottom: 40px
-} 
+}  
+ 
+
 
  
 
