--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -1,7 +1,4 @@
-html {
-    background-image: url(http://images8.alphacoders.com/397/397989.jpg);
-}
- 
+
 div {
     border-style: solid; 
     border-width: 5px; 
@@ -22,6 +19,11 @@ div {
     margin-top: 40px; 
     margin-bottom: 40px
 }  
+  
+body {
+    background-size: cover;
+    background-image: url(https://unsplash.imgix.net/44/fN6hZMWqRHuFET5YoApH_StBalmainCoffee.jpg?q=75&w=1080&h=1080&fit=max&fm=jpg&auto=format&s=04363b3d0d463aee08c3135e7e4993fb); 
+}
  
 
 
