--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -20,12 +20,19 @@ div {
     margin-bottom: 40px
 }  
   
-body {
+.projectsback {
     background-size: cover;
-    background-image: url(https://unsplash.imgix.net/44/fN6hZMWqRHuFET5YoApH_StBalmainCoffee.jpg?q=75&w=1080&h=1080&fit=max&fm=jpg&auto=format&s=04363b3d0d463aee08c3135e7e4993fb); 
-}
+    background-image: url(https://unsplash.imgix.net/44/fN6hZMWqRHuFET5YoApH_StBalmainCoffee.jpg?q=75&fm=jpg&auto=format&s=d7e5860cbf58ac8e277dd38e759b14c2); 
+} 
  
-
-
+.btn-defult {
+    background-color: #1A9191; 
+    border: 2px solid #FFFFFF; 
+    color: white;   
+}
+      
+.img-rounded {
+    
+}
  
 
