--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -1,9 +1,9 @@
 
 div {
-    border-style: solid; 
+/*    border-style: solid; 
     border-width: 5px; 
     padding: 30px; 
-    border-color: green;
+    border-color: green;*/
 }
  
 .container {
@@ -31,8 +31,16 @@ div {
     color: white;   
 }
       
-.img-rounded {
-    
+.technopage{
+    background-size: cover; 
+    background-image: url(https://unsplash.imgix.net/21/mac-glasses.JPG?q=75&fm=jpg&auto=format&s=4141ca104997c1ea19878b74b973a877);
 }
  
-
+.indexpage {
+    background-size: cover; 
+    background-image: url(https://unsplash.imgix.net/reserve/P6A1ZZ8nRPYKZHXbLikA_2014-07-11%2017.39.15-1.jpg?q=75&fm=jpg&auto=format&s=a017c40a7c2aedbe4943ac7471bed0cd); 
+} 
+ 
+h3 {
+    color: #C666D0;
+}
